<resources>
    <string name="app_name">Ecommerce App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="facebook_app_id">2295752937167596</string>
    <string name="fb_login_protocol_scheme">fb2295752937167596</string>


    <!--Menu item texts -->
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_cart">Cart</string>
    <string name="action_notifications">Notifications</string>

    <string name="item_1">Offers</string>
    <string name="item_2">Electronics</string>
    <string name="item_3">Lifestyle</string>
    <string name="item_4">Home Appliances</string>
    <string name="item_5">Books \u0026 More</string>
    <string name="item_6">More</string>

    <string name="my_profile">My Profile</string>
    <string name="my_rewards">My Rewards</string>
    <string name="my_orders">My Orders</string>
    <string name="my_cart">My Cart</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_account">My Account</string>

    <string name="help_support">Help \u0026 Support</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_conditions">Terms \u0026 Conditions</string>
    <string name="help_center">Help Center</string>

    <string name="search_hint">Search for Products, Brands and More</string>


    <!--Intro slider texts -->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Best Offers</string>
    <string name="slide_1_desc">The easiest way to order items from your favourite online Shop!
    </string>

    <string name="slide_2_title">LifeStyles</string>
    <string name="slide_2_desc">Order best Lifestyles items for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">Books and More</string>
    <string name="slide_4_desc">Books from various authors and publications </string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome
        slider -> clear data
    </string>
    <string name="play_again">Play Again</string>




    <string name="login_head">Login</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot?</string>
    <string name="login_button">Login</string>
    <string name="facebook_image">facebook image</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="cpassword">Confirm Password</string>
    <string name="sign_up">Signup</string>
    <string name="sign_upa">Sign Up</string>
    <string name="x">X</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="text_enteremail">Enter Email</string>
    <string name="continue1">Continue</string>
    <string name="addadddress">Add Address</string>
    <string name="house_number">House Number</string>
    <string name="streetaddress">Street Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="pincode">Pincode</string>
    <string name="add_address">Add Address</string>
    <string name="click_here_to_login">Click here to login</string>
    <string name="my_address">My Address</string>
    <string name="logout">Logout</string>
    <string name="title_activity_view_address">ViewAddress</string>
    <string name="prof">Profile</string>
    <string name="update">Update</string>

</resources>
