<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/addadddress"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:textColorHint="@color/grey"
            android:theme="@style/MyMaterialTheme"
            app:hintTextAppearance="@android:style/TextAppearance.Small">
            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/grey"
                android:hint="@string/house_number"
                android:inputType="text"
                android:textColor="@color/black"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/grey"
            android:theme="@style/MyMaterialTheme"
            app:hintTextAppearance="@android:style/TextAppearance.Small">
            <EditText
                android:id="@+id/street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/grey"
                android:hint="@string/streetaddress"
                android:inputType="text"
                android:textColor="@color/black"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/grey"
            android:theme="@style/MyMaterialTheme"
            app:hintTextAppearance="@android:style/TextAppearance.Small">
            <EditText
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/grey"
                android:hint="@string/city"
                android:inputType="text"
                android:textColor="@color/black"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/grey"
            android:theme="@style/MyMaterialTheme"
            app:hintTextAppearance="@android:style/TextAppearance.Small">
            <EditText
                android:id="@+id/state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/grey"
                android:hint="@string/state"
                android:inputType="text"
                android:textColor="@color/black"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/grey"
            android:theme="@style/MyMaterialTheme"
            app:hintTextAppearance="@android:style/TextAppearance.Small">
            <EditText
                android:id="@+id/pincode"
                android:layout_width="match_parent"
                android:maxLength="6"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/grey"
                android:hint="@string/pincode"
                android:inputType="number"
                android:textColor="@color/black"
                />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="40dp"
            android:text="@string/add_address"
            android:id="@+id/addadress"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:textSize="13sp"
            android:layout_height="30dp" />

    </LinearLayout>
</ScrollView>