<?xml version="1.0" encoding="utf-8"?>
   <ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/sign_upa"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:textColorHint="@color/grey"
            android:theme="@style/MyMaterialTheme"
            app:hintTextAppearance="@android:style/TextAppearance.Small">
            <EditText
                android:id="@+id/signup_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/grey"
                android:hint="@string/email_id"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/grey"
            android:theme="@style/MyMaterialTheme"
            app:hintTextAppearance="@android:style/TextAppearance.Small">
            <EditText
                android:id="@+id/signup_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/grey"
                android:hint="@string/first_name"
                android:inputType="text"
                android:textColor="@color/black"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/grey"
            android:theme="@style/MyMaterialTheme"
            app:hintTextAppearance="@android:style/TextAppearance.Small">
            <EditText
                android:id="@+id/signup_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/grey"
                android:hint="@string/last_name"
                android:inputType="text"
                android:textColor="@color/black"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/grey"
            android:theme="@style/MyMaterialTheme"
            app:hintTextAppearance="@android:style/TextAppearance.Small">
            <EditText
                android:id="@+id/signup_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/grey"
                android:hint="Mobile Number"
                android:inputType="number"
                android:textColor="@color/black"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/grey"
            android:theme="@style/MyMaterialTheme"
            app:hintTextAppearance="@android:style/TextAppearance.Small">
            <EditText
                android:id="@+id/signup_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/grey"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                />
        </android.support.design.widget.TextInputLayout>
       <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/grey"
            android:theme="@style/MyMaterialTheme"
            app:hintTextAppearance="@android:style/TextAppearance.Small">
            <EditText
                android:id="@+id/signup_cpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/grey"
                android:hint="@string/cpassword"
                android:inputType="textPassword"
                android:textColor="@color/black"
                />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:text="@string/sign_up"
            android:id="@+id/signup_button"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:textSize="13sp"
            android:layout_height="30dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:id="@+id/signuptext"
            android:textColor="@color/colorPrimary"
            android:text="@string/click_here_to_login"/>

    </LinearLayout>
</ScrollView>