<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="80dp"
    android:layout_marginStart="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginEnd="20dp"
    android:background="@drawable/border"
    android:layout_width="match_parent"
    >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
    android:layout_margin="10dp"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/x"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:id="@+id/forgot_cancel"
            android:layout_marginBottom="20dp"
            android:layout_gravity="end"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:gravity="end"/>
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:textColorHint="@color/grey"
            android:theme="@style/MyMaterialTheme"
            app:hintTextAppearance="@android:style/TextAppearance.Small">
            <EditText
                android:id="@+id/forgot_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/grey"
                android:hint="@string/text_enteremail"
                android:inputType="textEmailAddress"
                android:textColor="@color/grey"
                />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"
            android:text="@string/continue1"
            android:id="@+id/forgot_button"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:textSize="13sp"
            android:layout_height="30dp" />
    </LinearLayout>
</ScrollView>