<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/login_head"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/grey"
        android:theme="@style/MyMaterialTheme"
        app:hintTextAppearance="@android:style/TextAppearance.Small">
        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/grey"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            />
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:orientation="horizontal">
        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/grey"
            android:theme="@style/MyMaterialTheme"
            app:hintTextAppearance="@android:style/TextAppearance.Small">
            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/grey"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                />
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_width="0dp"
            android:textSize="14sp"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/login_forgot"
            android:layout_gravity="bottom"
            android:textColor="@color/colorPrimary"
            android:layout_height="wrap_content"
            android:text="@string/forgot"
            android:layout_weight="1"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/login_button"
        android:id="@+id/login_button"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:textSize="13sp"
        android:layout_height="30dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_height="wrap_content"
            android:text="Dont have an account?"
            />
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="13sp"
            android:id="@+id/login_create"
            android:layout_height="wrap_content"
            android:text="Join now"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="25dp"
            android:id="@+id/facebook_buttonlayout"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp">
            <Button
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:id="@+id/facebook_button"
                android:background="@color/colorPrimary"
                style="?android:attr/buttonBarButtonStyle"
                android:textSize="12sp"
                />
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/facebook_button_image"
                android:src="@drawable/facebook"
                android:contentDescription="@string/facebook_image"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="25dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/google_buttonlayout"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/google_button"
                style="?android:attr/buttonBarButtonStyle"
                android:background="@color/colorPrimary"
                android:textSize="12sp"
                />
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/google_button_image"
                android:src="@drawable/google"
                android:contentDescription="@string/facebook_image"
                android:layout_centerInParent="true"/>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>